--- a/CustomRPC/MainForm.ur.resx
+++ b/CustomRPC/MainForm.ur.resx
@@ -245,7 +245,7 @@
     <value>207, 22</value>
   </data>
   <data name="gitHubPageToolStripMenuItem.Text" xml:space="preserve">
-    <value>گٹ کا ہب پیج</value>
+    <value>گٹ ہب پیج</value>
   </data>
   <data name="toolStripSeparatorHelp1.Size" type="System.Drawing.Size, System.Drawing">
     <value>204, 6</value>
