Updated vi (new translator)

--- a/CustomRPC/About.vi.resx
+++ b/CustomRPC/About.vi.resx
@@ -125,7 +125,7 @@
     <value>211, 19</value>
   </data>
   <data name="labelMadeBy.Text" xml:space="preserve">
-    <value>Được làm bởi: maximmax42</value>
+    <value>Được tạo ra bởi: maximmax42</value>
   </data>
   <data name="buttonClose.Text" xml:space="preserve">
     <value>Đóng</value>
