Updated de (new translator)

--- a/CustomRPC/About.de.resx
+++ b/CustomRPC/About.de.resx
@@ -125,7 +125,7 @@
     <value>209, 19</value>
   </data>
   <data name="labelMadeBy.Text" xml:space="preserve">
-    <value>Gemacht von: maximmax42</value>
+    <value>Erstellt von: maximmax42</value>
   </data>
   <data name="buttonClose.Text" xml:space="preserve">
     <value>Schließen</value>
