--- a/CustomRPC/MainForm.bs.resx
+++ b/CustomRPC/MainForm.bs.resx
@@ -185,7 +185,7 @@
     <value>Napusti</value>
   </data>
   <data name="fileToolStripMenuItem.Text" xml:space="preserve">
-    <value>Fajl</value>
+    <value>Datoteka</value>
   </data>
   <data name="runOnStartupToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>240, 22</value>
